# ai-pack

./: .gitignore  CONTRIBUTING.md  README.md  RELEASING.md  ai_pack.py  pyproject.toml  requirements.txt  setup.py  test_ai_pack.py
.github/workflows/: binary-release.yml  publish.yml  test.yml
src/ai_pack/: __init__.py  cli.py  constants.py  git.py  packer.py  skeleton.py  ui.py  utils.py
tests/: __init__.py  test_binary.py  test_cli.py  test_gitignore.py  test_skeleton.py  test_skeleton_braces.py  test_skeleton_python.py
