[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-pack-cli"
version = "0.2.2"
description = "Pack your codebase into a single formatted Markdown string for LLMs."
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Ray Doan"}
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "pyperclip>=1.8.2",
    "questionary>=1.10.0",
    "tree-sitter~=0.21.3",
    "tree-sitter-languages~=1.10.2",
]

[project.urls]
Homepage = "https://github.com/iamraydoan/ai-pack"

[project.scripts]
ai-pack = "ai_pack.cli:main"
aipack = "ai_pack.cli:main"
aip = "ai_pack.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py38"
line-length = 120

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # Pyflakes
    "I",  # isort (import sorting)
]
ignore = [
    "E501", # Line length (handled gracefully by formatter)
]

[tool.ruff.lint.isort]
known-first-party = ["ai_pack"]
